[project]
name = "landscape-mcp"
version = "0.1.0"
description = "An MCP server for Landscape"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["httpx>=0.28.1", "mcp[cli]>=1.26.0", "pydantic"]

[project.scripts]
landscape-mcp = "landscape_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
